kubernetes/webhook_template.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: epsagon-mutation
---
apiVersion: v1
kind: Service
metadata:
  name: mutation-controller
  namespace: epsagon-mutation
  labels:
    app: mutation-controller
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: mutation-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mutation-controller
  namespace: epsagon-mutation
  labels:
    app: mutation-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mutation-controller
  template:
    metadata:
      name: mutation-controller
      labels:
        app: mutation-controller
    spec:
      containers:
        - name: mutator
          image: ${IMAGE_REPO}/${IMAGE_NAME}:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: epsagon-mutation-controller-webhook-certs

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutation-controller
  labels:
    app: mutation-controller
webhooks:
  - name: mutation-controller.default.svc.cluster.local
    clientConfig:
      caBundle: ${CA_BUNDLE}
      service:
        name: mutation-controller
        namespace: epsagon-mutation
        path: "/mutate"
        port: 443
    rules:
      - operations: ["UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
    sideEffects: None
    timeoutSeconds: 5
    reinvocationPolicy: Never
    failurePolicy: Ignore
    objectSelector:
      matchLabels:
        epsagon-mutation: enabled
